Fixing repo links. (move to git overlay).

--- a/web/output/about.htm
+++ b/web/output/about.htm
@@ -22,7 +22,7 @@ kernel to include both base and extras.
 </p>
 
 <p>
-genpatches is maintained in Gentoo SVN. This is <a href="http://sources.gentoo.org/viewcvs.py/linux-patches/genpatches-2.6/">browseable online</a> and the trunk contents are regularly mirrored <a href="trunk/">here</a>. <a href="http://anonvcs.gentoo.org/">Anonymous access</a> is also available.
+genpatches is maintained in Gentoo SVN. This is <a href="http://git.overlays.gentoo.org/gitweb/?p=proj/linux-patches.git;a=summary">browseable online</a> and the trunk contents are regularly mirrored <a href="trunk/">here</a>. <a href="http://anonvcs.gentoo.org/">Anonymous access</a> is also available.
 </p>
 
 <p>
