adding output from website generation scripts

--- a/web/output/about.htm
+++ b/web/output/about.htm
@@ -22,7 +22,7 @@ kernel to include both base and extras.
 </p>
 
 <p>
-genpatches is maintained in Gentoo SVN. This is <a href="http://git.overlays.gentoo.org/gitweb/?p=proj/linux-patches.git;a=summary">browseable online</a> and the trunk contents are regularly mirrored <a href="trunk/">here</a>. <a href="http://anonvcs.gentoo.org/">Anonymous access</a> is also available.
+genpatches is maintained in Gentoo SVN. This is <a href="http://sources.gentoo.org/viewcvs.py/linux-patches/genpatches-2.6/">browseable online</a> and the trunk contents are regularly mirrored <a href="trunk/">here</a>. <a href="http://anonvcs.gentoo.org/">Anonymous access</a> is also available.
 </p>
 
 <p>
@@ -73,6 +73,6 @@ since all security patch handling is done in one place only.
 </p>
 
 
-<hr /><div align="right"><h4>Automatically generated: Sun Jun 29 16:01:53 EDT 2014
+<hr /><div align="right"><h4>Automatically generated: Tue Jul  1 13:39:14 EDT 2014
  by mike
 </h4></div></body></html>
