Fix link in sitemap.

--- a/web/content/sitemap.htm
+++ b/web/content/sitemap.htm
@@ -36,7 +36,7 @@ Latest split-out patches from our current development trees, viewable on the web
 An archive of all the release tarballs.</li>
 <br/>
 
-<li><b><a href="http://git.overlays.gentoo.org/gitweb/?p=proj/linux-patches.git;a=summary"><h4>Repository</h4></a></b>
+<li><b><a href="http://git.gentoo.org/gitweb/?p=proj/linux-patches.git;a=summary"><h4>Repository</h4></a></b>
 The entire repository and its history is browseable here.</li>
 <br/>
 
