Update gentoo-kernel list address

--- a/web/content/about.htm
+++ b/web/content/about.htm
@@ -26,7 +26,7 @@ genpatches is maintained in Gentoo Git. This is <a href="https://gitweb.gentoo.o
 </p>
 
 <p>
-genpatches releases are announced on the gentoo-kernel mailing list. To subscribe, send a mail to <a href="mailto:gentoo-kernel+subscribe@gentoo.org">gentoo-kernel+subscribe@gentoo.org</a>. The list is very low traffic, almost all mails are genpatches release announcements. You can also view the <a href="http://archives.gentoo.org/gentoo-kernel/">list archives</a>.
+genpatches releases are announced on the gentoo-kernel mailing list. To subscribe, send a mail to <a href="mailto:gentoo-kernel+subscribe@lists.gentoo.org">gentoo-kernel+subscribe@lists.gentoo.org</a>. The list is very low traffic, almost all mails are genpatches release announcements. You can also view the <a href="http://archives.gentoo.org/gentoo-kernel/">list archives</a>.
 </p>
 
 <p>
