More updates to genpatches site
Signed-off-by: Mike Pagano <mpagano@gentoo.org>

--- a/web/content/sitemap.html
+++ b/web/content/sitemap.html
@@ -28,23 +28,23 @@ Details about common issues with our kernel releases, and their solutions.</li>
 
 <ul>
 
-<li><h4><b><a href="trunk/">Trunk></a></b></h4>
+<li><h4><b><a href="trunk/">Trunk</a></b></h4>
 Latest split-out patches from our current development trees, viewable on the web.</li>
 <br/>
 
-<li><h4><b><a href="tarballs/">Tarballs></a></b></h4>
+<li><h4><b><a href="tarballs/">Tarballs</a></b></h4>
 An archive of all the release tarballs.</li>
 <br/>
 
-<li><h4><b><a href="http://git.gentoo.org/gitweb/?p=proj/linux-patches.git;a=summary">Repository></a></b>
+<li><h4><b><a href="http://git.gentoo.org/gitweb/?p=proj/linux-patches.git;a=summary">Repository</a></b>
 The entire repository and its history is browseable here.</li>
 <br/>
 
-<li><h4><b><a href="http://bugs.gentoo.org/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&emailassigned_to1=1&emailtype1=exact&email1=kernel%40gentoo.org&emailassigned_to2=1&emailreporter2=1&emailcc2=1&emailtype2=substring&email2=&bugidtype=include&bug_id=&chfieldfrom=&chfieldto=Now&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">Gentoo Kernel Bugs></a></b></h4>
+<li><h4><b><a href="http://bugs.gentoo.org/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&emailassigned_to1=1&emailtype1=exact&email1=kernel%40gentoo.org&emailassigned_to2=1&emailreporter2=1&emailcc2=1&emailtype2=substring&email2=&bugidtype=include&bug_id=&chfieldfrom=&chfieldto=Now&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">Gentoo Kernel Bugs</a></b></h4>
 Gentoo's current kernel bug list.</li>
 <br/>
 
-<li><h4><b><a href="http://bugzilla.kernel.org/buglist.cgi?short_desc_type=allwordssubstr&short_desc=&long_desc_type=allwordssubstr&long_desc=&kernel_version_type=allwordssubstr&kernel_version=&bug_status=NEW&bug_status=ASSIGNED&emailcc1=1&emailtype1=substring&email1=kernel%40gentoo.org&emailassigned_to2=1&emailreporter2=1&emailcc2=1&emailtype2=substring&email2=&bugidtype=include&bug_id=&changedin=&chfieldfrom=&chfieldto=Now&chfieldvalue=&cmdtype=doit&newqueryname=&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">Gentoo Upstream Kernel Bugs></a></b></h4>
+<li><h4><b><a href="http://bugzilla.kernel.org/buglist.cgi?short_desc_type=allwordssubstr&short_desc=&long_desc_type=allwordssubstr&long_desc=&kernel_version_type=allwordssubstr&kernel_version=&bug_status=NEW&bug_status=ASSIGNED&emailcc1=1&emailtype1=substring&email1=kernel%40gentoo.org&emailassigned_to2=1&emailreporter2=1&emailcc2=1&emailtype2=substring&email2=&bugidtype=include&bug_id=&changedin=&chfieldfrom=&chfieldto=Now&chfieldvalue=&cmdtype=doit&newqueryname=&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">Gentoo Upstream Kernel Bugs</a></b></h4>
 Problems reported by Gentoo users regarding the mainline kernel, currently being tracked.</li>
 <br/>
 
