--- a/web/content/sitemap.html
+++ b/web/content/sitemap.html
@@ -36,7 +36,7 @@ Latest split-out patches from our current development trees, viewable on the web
 An archive of all the release tarballs.</li>
 <br/>
 
-<li><h4><b><a href="http://git.gentoo.org/gitweb/?p=proj/linux-patches.git;a=summary">Repository</a></b>
+<li><h4><b><a href="http://git.gentoo.org/gitweb/?p=proj/linux-patches.git;a=summary">Repository</a></b></h4>
 The entire repository and its history is browseable here.</li>
 <br/>
 
